--- a/defcon/status/templates/index.html
+++ b/defcon/status/templates/index.html
@@ -3,34 +3,42 @@
 {% load bootstrap3 %}
 {% load staticfiles %}
 
-{% block title %}test{% endblock %}
+{% block title %}DefCon{% endblock %}
 
 {% block bootstrap3_extra_head %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 {% endblock %}
 
-{% block bootstrap3_content %}
+{% block content %}
 <div id="main">
   <header>
-    <h1>Defcon</h1>
+    <h1>DefCon</h1>
   </header>
   <main>
-    <table class="table table-striped">
-      <thead>
-	<th>Name</th>
-	<th>Link</th>
-	<th>State</th>
-      </thead>
-      <tbody>
-	{% for component in components %}
-	<tr>
-	  <td><a href="{% url 'status' component.id %}">{{ component.name }}</a></td>
-	  <td><a href="{{ component.link }}">{{ component.link }}</a></td>
-	  <td>State</td>
-	</tr>
-	{% endfor %}
-      </tbody>
-    </table>
+    {% for component in components %}
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+	<h3 class="panel-title">{{ component.name }}</h3>
+      </div>
+      <div class="panel-body">
+	{% if component.descrition %}
+	<p>
+	  Description:
+	  {{ component.description }}
+	</p>
+	{% endif %}
+	<p>
+	  View: <a href="{% url 'status' component.id %}">{{ component.name }}/</a>
+	  <span class="badge">1</span>
+	  <span class="label label-danger">Danger</span>
+	  {% if component.link %}
+	  <br />
+	  Link: <a href="{{ component.link }}">{{ component.link }}</a>
+	  {% endif %}
+	</p>
+      </div>
+    </div>
+    {% endfor %}
   </main>
 </div>
 {% endblock %}
