--- a/defcon/status/static/css/style.css
+++ b/defcon/status/static/css/style.css
@@ -103,16 +103,16 @@ section.defcon.dc1 {
   background-color: #E64759;
 }
 section.defcon.dc2 {
-  background-color: #f39c12;
+  background-color: #E64759;
 }
 section.defcon.dc3 {
-  background-color: #ccbf1b;
+  background-color: #f39c12;
 }
 section.defcon.dc4 {
-  background-color: #1BC98E;
+  background-color: #3498db;
 }
 section.defcon.dc5 {
-  background-color: #3498db;
+  background-color: #1BC98E;
 }
 
 /* I need lighter colors for numbers */
@@ -193,14 +193,14 @@ section.defcon.dc1 a.more:before {
   border-color: #E64759 transparent transparent transparent;
 }
 section.defcon.dc2 a.more:before {
-  border-color: #f39c12 transparent transparent transparent;
+  border-color: #E64759 transparent transparent transparent;
 }
 section.defcon.dc3 a.more:before {
-  border-color: #ccbf1b transparent transparent transparent;
+  border-color: #f39c12 transparent transparent transparent;
 }
 section.defcon.dc4 a.more:before {
-  border-color: #1BC98E transparent transparent transparent;
+  border-color: #3498db transparent transparent transparent;
 }
 section.defcon.dc5 a.more:before {
-  border-color: #3498db transparent transparent transparent;
+  border-color: #1BC98E transparent transparent transparent;
 }
