Base plugin system and a lot of other changes.

--- a/defcon/status/templates/status.html
+++ b/defcon/status/templates/status.html
@@ -3,7 +3,7 @@
 {% load bootstrap3 %}
 {% load staticfiles %}
 
-{% block title %}test{% endblock %}
+{% block title %}{{ component.name }} - DefCon {{ component.defcon }}{% endblock %}
 
 {% block content %}
 <div id="main">
