--- a/defcon/status/templates/index.html
+++ b/defcon/status/templates/index.html
@@ -17,7 +17,9 @@
 	<h3 class="panel-title">{{ component.name }}</h3>
       </div>
       <div class="panel-body">
-	DefCon: <span class="badge">{{ component.defcon }}</span>
+	<span class="label label-{{ component.defcon|defcon_to_class }} pull-right">
+	  DefCon {{ component.defcon }}
+	</span>
 	{% if component.descrition %}
 	<p>
 	  Description:
@@ -26,7 +28,6 @@
 	{% endif %}
 	<p>
 	  View: <a href="{% url 'status' component.id %}">{{ component.name }}/</a>
-	  <span class="label label-danger">Danger</span>
 	  {% if component.link %}
 	  <br />
 	  Link: <a href="{{ component.link }}">{{ component.link }}</a>
