--- a/defcon/status/templates/index.html
+++ b/defcon/status/templates/index.html
@@ -11,32 +11,35 @@
     <h1>DefCon</h1>
   </header>
   <main>
-    {% for component in components %}
-    <div class="panel panel-{{ component.defcon|defcon_to_class }}">
-      <div class="panel-heading">
-	<h3 class="panel-title">{{ component.name }}</h3>
+    <div class="">
+      {% for component in components %}
+      <div class="col-defcon col-md-3">
+        <div class="panel panel-{{ component.defcon|defcon_to_class }}">
+          <div class="panel-heading">
+	          <h3 class="panel-title">{{ component.name }}</h3>
+          </div>
+          <div class="panel-body">
+	          <span class="label label-{{ component.defcon|defcon_to_class }} pull-right">
+	            DefCon {{ component.defcon }}
+	          </span>
+	          {% if component.descrition %}
+	          <p>
+	            Description:
+	            {{ component.description }}
+	          </p>
+	          {% endif %}
+	          <p>
+	            View: <a href="{% url 'status' component.id %}">{{ component.name }}/</a>
+	            {% if component.link %}
+	            <br />
+	            Link: <a href="{{ component.link }}">{{ component.link }}</a>
+	            {% endif %}
+	          </p>
+          </div>
+        </div>
       </div>
-      <div class="panel-body">
-	<span class="label label-{{ component.defcon|defcon_to_class }} pull-right">
-	  DefCon {{ component.defcon }}
-	</span>
-	{% if component.descrition %}
-	<p>
-	  Description:
-	  {{ component.description }}
-	</p>
-	{% endif %}
-	<p>
-	  View: <a href="{% url 'status' component.id %}">{{ component.name }}/</a>
-	  {% if component.link %}
-	  <br />
-	  Link: <a href="{{ component.link }}">{{ component.link }}</a>
-	  {% endif %}
-	</p>
-      </div>
+      {% endfor %}
     </div>
-    {% endfor %}
   </main>
 </div>
 {% endblock %}
-
