--- a/defcon/status/templates/status.html
+++ b/defcon/status/templates/status.html
@@ -13,7 +13,6 @@
     <span>
       Current state of <strong id="perimeter">{{ component.name }}</strong> is:
     </span>
-    <img src="/badge/{{component.id}}.svg" />
   </header>
   <main class="defcon-container">
     {% for dc, data in component.statuses_by_plugins %}
@@ -39,5 +38,17 @@
     </section>
     {% endfor %}
   </main>
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <p>
+	Badge: <img src="/badge/{{component.id}}.svg" />
+	<code>{{ base_url }}badge/{{component.id}}.svg</code>
+      </p>
+      <p>
+	API:
+	<code>{{ base_url }}api/simple/{{component.id}}/</code>
+      </p>
+    </div>
+  </div>
 </div>
 {% endblock %}
