--- a/defcon/status/templates/status.html
+++ b/defcon/status/templates/status.html
@@ -42,11 +42,11 @@
     <div class="panel-body">
       <p>
 	Badge: <img src="/badge/{{component.id}}.svg" />
-	<code>{{ base_url }}badge/{{component.id}}.svg</code>
+	<code>{{ base_url }}/badge/{{component.id}}.svg</code>
       </p>
       <p>
 	API:
-	<code>{{ base_url }}api/simple/{{component.id}}/</code>
+	<code>{{ base_url }}/api/simple/{{component.id}}/</code>
       </p>
     </div>
   </div>
