Add a nice icon

--- a/defcon/status/templates/index.html
+++ b/defcon/status/templates/index.html
@@ -2,13 +2,14 @@
 
 {% load bootstrap3 %}
 {% load defcon %}
+{% load fontawesome %}
 
 {% block title %}DefCon{% endblock %}
 
 {% block content %}
 <div id="main">
   <header>
-    <h1>DefCon</h1>
+    <h1>{% fontawesome_icon 'exclamation-triangle' %} DefCon</h1>
   </header>
   <main>
     <div class="">
