--- a/defcon/status/templates/base.html
+++ b/defcon/status/templates/base.html
@@ -33,7 +33,7 @@
 	<span class="icon-bar"></span>
 	<span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">DefCon</a>
+      <a class="navbar-brand" href="/">{% fontawesome_icon 'exclamation-triangle' %} DefCon</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
