--- a/defcon/status/templates/base.html
+++ b/defcon/status/templates/base.html
@@ -10,10 +10,9 @@
 {% block bootstrap3_extra_head %}
 
 {% block extra_head %}
-<header>
    {% fontawesome_stylesheet %}
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-</header>
+  <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
 {% endblock %}
 {{ super }}
 
