--- a/defcon/status/templates/index.html
+++ b/defcon/status/templates/index.html
@@ -8,39 +8,36 @@
 
 {% block content %}
 <div id="main">
-  <header>
-    <h1>{% fontawesome_icon 'exclamation-triangle' %} DefCon</h1>
-  </header>
-  <main>
-    <div class="">
-      {% for component in components %}
-      <div class="col-defcon col-md-3">
-        <div class="panel panel-{{ component.defcon|defcon_to_class }}">
-          <div class="panel-heading">
-	          <h3 class="panel-title">{{ component.name }}</h3>
-          </div>
-          <div class="panel-body">
+    <header>
+        <h1>{% fontawesome_icon 'exclamation-triangle' %} DefCon</h1>
+    </header>
+    <main>
+        <div class="">
+            {% for component in components %}
+            <div class="col-defcon col-md-3">
+                <div class="panel panel-{{ component.defcon|defcon_to_class }}">
+                    <div class="panel-heading">
+                        <h3 class="panel-title"><a href="{% url 'status' component.id %}">{{ component.name }}</a></h3>
+                    </div>
+                    <div class="panel-body" style="min-height: 12em;">
 	          <span class="label label-{{ component.defcon|defcon_to_class }} pull-right">
 	            DefCon {{ component.defcon }} - {{ component.defcon|defcon_to_word }}
 	          </span>
-	          {% if component.descrition %}
-	          <p>
-	            Description:
-	            {{ component.description }}
-	          </p>
-	          {% endif %}
-	          <p>
-	            View: <a href="{% url 'status' component.id %}">{{ component.name }}/</a>
-	            {% if component.link %}
-	            <br />
-	            Link: <a href="{{ component.link }}">{{ component.link }}</a>
-	            {% endif %}
-	          </p>
-          </div>
+                        <p>
+                            {% if component.description %}
+
+                            {{ component.description|safe }}<br/>
+                            {% endif %}
+                            {% if component.link %}
+                            <br/>
+                            Link: <a href="{{ component.link }}">{{ component.link }}</a>
+                            {% endif %}
+                        </p>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
         </div>
-      </div>
-      {% endfor %}
-    </div>
-  </main>
+    </main>
 </div>
 {% endblock %}
